web/k8s/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dashboard-deployment
  namespace: prod-ksox-finance
  labels:
    app: web-dashboard
spec:
  selector:
    matchLabels:
      app: web-dashboard
  template:
    metadata:
      labels:
        app: web-dashboard
    spec:
      containers:
        - name: web-dashboard
          image: web-dashboard
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-dashboard-service
  namespace: prod-ksox-finance
spec:
  selector:
    app: web-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: web-dashboard-route
  namespace: prod-ksox-finance
spec:
  parentRefs:
    - name: prod-gateway
      namespace: prod
  hostnames:
    - dashboard.ksox.finance
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: web-dashboard-service
        port: 80
