web/k8s/processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-processor-deployment
  namespace: ksox-finance
  labels:
    app: web-processor
spec:
  selector:
    matchLabels:
      app: web-processor
  template:
    metadata:
      labels:
        app: web-processor
    spec:
      containers:
        - name: web-processor
          image: registry.internal.visoft.solutions/web-processor
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 300Mi
              cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: web-processor-service
  namespace: ksox-finance
spec:
  selector:
    app: web-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-processor-ingress
  namespace: ksox-finance
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: ingress-nginx-external
  tls:
    - hosts:
        - pay.ksox.finance
      secretName: ksox-finance-tls
  rules:
    - host: pay.ksox.finance
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-processor-service
                port:
                  number: 80
